--- a/index1-10.html
+++ b/index1-10.html
@@ -2,8 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style1-9.css" />
-    <title>9章演習問題</title>
+    <link rel="stylesheet" href="style1-10.css" />
+    <title>HTML・CSS課題問題</title>
   </head>
 
   <body>
